Correcting css for image
css of image because it was not shown change is only /

--- a/css/stylel.css
+++ b/css/stylel.css
@@ -50,7 +50,7 @@ a:hover {
 
 .top-container{
 
-    background-image: url(/Images/laptop.jpg);
+    background-image: url(Images/laptop.jpg);
     background-size: 100% auto;
     background-repeat: no-repeat;
     height: 400px;
